@@ -1,3 +1,6 @@
+HEAD
+	+ Use always external mailfilter if configured instead of no longer
+	  maintained Zentyal mailfilter module
 4.0.4
 	+ Revert acls changes in dovecot
 	+ Enable LDAP mailquota (contribution by googley)
